hphp/hack/test/typecheck/expression_trees/helper_function_noreturn_bad.php.like_types.exp
File "helper_function_noreturn_bad.php", line 20, characters 8-14:
Typing error (Typing[4110])
  File "helper_function_noreturn_bad.php", line 20, characters 8-14:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "helper_function_noreturn_bad.php", line 19, characters 18-63:
  But got `dynamic` because it is an unenforceable type
File "helper_function_noreturn_bad.php", line 20, characters 16-25:
You are using the return value of a `noreturn` function (Typing[4133])
  File "helper_function_noreturn_bad.php", line 7, characters 55-62:
  A `noreturn` function always throws or exits.
File "helper_function_noreturn_bad.php", line 21, characters 8-14:
Typing error (Typing[4110])
  File "helper_function_noreturn_bad.php", line 21, characters 8-14:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "helper_function_noreturn_bad.php", line 19, characters 18-63:
  But got `dynamic` because it is an unenforceable type
File "helper_function_noreturn_bad.php", line 21, characters 16-20:
You are using the return value of a `noreturn` function (Typing[4133])
  File "helper_function_noreturn_bad.php", line 14, characters 53-60:
  A `noreturn` function always throws or exits.
